[gd_scene load_steps=45 format=2]

[ext_resource path="res://VarelaRound-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://art/stone_grid.png" type="Texture" id=2]
[ext_resource path="res://player_anim/player3.png" type="Texture" id=3]
[ext_resource path="res://script/movement.gd" type="Script" id=4]
[ext_resource path="res://art/carpet_auto_tile.png" type="Texture" id=5]
[ext_resource path="res://art/stone_rough.png" type="Texture" id=6]
[ext_resource path="res://art/books_auto_tile.png" type="Texture" id=7]
[ext_resource path="res://player_anim/player4.png" type="Texture" id=8]
[ext_resource path="res://player_anim/player7.png" type="Texture" id=9]
[ext_resource path="res://player_anim/player10.png" type="Texture" id=10]
[ext_resource path="res://player_anim/player6.png" type="Texture" id=11]
[ext_resource path="res://art/shadow.png" type="Texture" id=12]
[ext_resource path="res://player_anim/player9.png" type="Texture" id=13]
[ext_resource path="res://player_anim/player1.png" type="Texture" id=14]
[ext_resource path="res://player_anim/player2.png" type="Texture" id=15]
[ext_resource path="res://player_anim/player8.png" type="Texture" id=16]
[ext_resource path="res://art/ghost.png" type="Texture" id=17]
[ext_resource path="res://art/tile.png" type="Texture" id=18]
[ext_resource path="res://art/door_left.png" type="Texture" id=19]
[ext_resource path="res://script/ghost.gd" type="Script" id=20]
[ext_resource path="res://art/door_right.png" type="Texture" id=21]
[ext_resource path="res://art/light.png" type="Texture" id=22]
[ext_resource path="res://script/warp.gd" type="Script" id=23]
[ext_resource path="res://script/GhostArea2D.gd" type="Script" id=24]
[ext_resource path="res://script/two.gd" type="Script" id=25]

[sub_resource type="TileSet" id=1]
0/name = "stone_grid.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "stone_rough.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "carpet_auto_tile.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 144, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 18, Vector2( 0, 3 ), 16, Vector2( 1, 0 ), 176, Vector2( 1, 1 ), 178, Vector2( 1, 2 ), 50, Vector2( 1, 3 ), 48, Vector2( 2, 0 ), 184, Vector2( 2, 1 ), 186, Vector2( 2, 2 ), 58, Vector2( 2, 3 ), 56, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 154, Vector2( 3, 2 ), 26, Vector2( 3, 3 ), 24, Vector2( 4, 0 ), 187, Vector2( 4, 1 ), 434, Vector2( 4, 2 ), 182, Vector2( 4, 3 ), 250, Vector2( 5, 0 ), 440, Vector2( 5, 1 ), 510, Vector2( 5, 2 ), 447, Vector2( 5, 3 ), 62, Vector2( 6, 0 ), 248, Vector2( 6, 1 ), 507, Vector2( 6, 2 ), 255, Vector2( 6, 3 ), 59, Vector2( 7, 0 ), 190, Vector2( 7, 1 ), 218, Vector2( 7, 2 ), 155, Vector2( 7, 3 ), 442, Vector2( 8, 0 ), 432, Vector2( 8, 1 ), 438, Vector2( 8, 2 ), 446, Vector2( 8, 3 ), 54, Vector2( 9, 0 ), 506, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 511, Vector2( 9, 3 ), 63, Vector2( 10, 0 ), 504, Vector2( 10, 2 ), 443, Vector2( 10, 3 ), 191, Vector2( 11, 0 ), 216, Vector2( 11, 1 ), 251, Vector2( 11, 2 ), 219, Vector2( 11, 3 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "books_auto_tile.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 144, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 18, Vector2( 0, 3 ), 16, Vector2( 1, 0 ), 176, Vector2( 1, 1 ), 178, Vector2( 1, 2 ), 50, Vector2( 1, 3 ), 48, Vector2( 2, 0 ), 184, Vector2( 2, 1 ), 186, Vector2( 2, 2 ), 58, Vector2( 2, 3 ), 56, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 154, Vector2( 3, 2 ), 26, Vector2( 3, 3 ), 24, Vector2( 4, 0 ), 187, Vector2( 4, 1 ), 434, Vector2( 4, 2 ), 182, Vector2( 4, 3 ), 250, Vector2( 5, 0 ), 440, Vector2( 5, 1 ), 510, Vector2( 5, 2 ), 447, Vector2( 5, 3 ), 62, Vector2( 6, 0 ), 248, Vector2( 6, 1 ), 507, Vector2( 6, 2 ), 255, Vector2( 6, 3 ), 59, Vector2( 7, 0 ), 190, Vector2( 7, 1 ), 218, Vector2( 7, 2 ), 155, Vector2( 7, 3 ), 442, Vector2( 8, 0 ), 432, Vector2( 8, 1 ), 438, Vector2( 8, 2 ), 446, Vector2( 8, 3 ), 54, Vector2( 9, 0 ), 506, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 511, Vector2( 9, 3 ), 63, Vector2( 10, 0 ), 504, Vector2( 10, 2 ), 443, Vector2( 10, 3 ), 191, Vector2( 11, 0 ), 216, Vector2( 11, 1 ), 251, Vector2( 11, 2 ), 219, Vector2( 11, 3 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=4]
radius = 7.11073

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 16 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 10 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="TileSet" id=6]
0/name = "tile.png 0"
0/texture = ExtResource( 18 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=7]
radius = 8.0

[sub_resource type="CircleShape2D" id=8]
radius = 8.0

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=18]
resource_name = "GhostBob"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Ghost:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, -15 ), Vector2( 0, -10 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "ShadowPulse"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Shadow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 0.7, 0.7 ), Vector2( 0.9, 0.9 ) ]
}

[sub_resource type="CircleShape2D" id=20]
radius = 8.0

[sub_resource type="DynamicFont" id=21]
size = 6
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=14]
resource_name = "GhostBob"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Ghost:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, -15 ), Vector2( 0, -10 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "ShadowPulse"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Shadow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 0.7, 0.7 ), Vector2( 0.9, 0.9 ) ]
}

[sub_resource type="CircleShape2D" id=12]
radius = 8.0

[sub_resource type="DynamicFont" id=13]
size = 6
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=16]
resource_name = "GhostBob"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Ghost:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, -15 ), Vector2( 0, -10 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "ShadowPulse"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Shadow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 0.7, 0.7 ), Vector2( 0.9, 0.9 ) ]
}

[node name="two" type="Node"]
script = ExtResource( 25 )

[node name="StoneTilemap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 1, 0, 65549, 0, 0, 65550, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 1, 0, 196617, 0, 0, 196618, 1, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 1, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 1, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 1, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 1, 0, 458766, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 589829, 1, 0, 589830, 1, 0, 589831, 0, 0, 589832, 0, 0, 589833, 1, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 655365, 1, 0, 655366, 1, 0, 655367, 0, 0, 655368, 0, 0, 655369, 1, 0, 655370, 0, 0, 655371, 0, 0, 655372, 1, 0, 655373, 0, 0, 655374, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0 )

[node name="Carpet" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -65529, 0, 8, -65528, 0, 11, 7, 0, 65544, 8, 0, 131083, 65543, 0, 196616, 65544, 0, 196614, 65545, 0, 196610, 65546, 0, 3, 131082, 0, 65536, 196614, 0, 196609, 196615, 0, 196610, 196616, 0, 3, 196618, 0, 131073, 196619, 0, 2, 196620, 0, 196611, 262152, 0, 65536, 262155, 0, 131072, 327687, 0, 1, 327688, 0, 131074, 327689, 0, 3, 327692, 0, 196609, 327693, 0, 3, 393222, 0, 196609, 393223, 0, 131075, 393225, 0, 65536, 393229, 0, 65536, 458761, 0, 65536, 458763, 0, 196609, 458764, 0, 196610, 458765, 0, 65539, 524295, 0, 196608, 524297, 0, 65536, 524301, 0, 65536, 589833, 0, 65540, 589834, 0, 6, 589835, 0, 196610, 589836, 0, 196610, 589837, 0, 65539, 655367, 0, 196609, 655368, 0, 196610, 655369, 0, 131080, 655370, 0, 131083, 655373, 0, 131072, 720905, 0, 65544, 720906, 0, 131083, 786441, 0, 196616, 786442, 0, 196619 )

[node name="Bookshelves" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 5, 0, 1, 6, 0, 196611, 9, 0, 196609, 10, 0, 196610, 11, 0, 5, 12, 0, 10, 13, 0, 10, 14, 0, 11, 65541, 0, 65536, 65547, 0, 131076, 65548, 0, 196617, 65549, 0, 131077, 65550, 0, 131083, 131077, 0, 65536, 131079, 0, 196609, 131080, 0, 196610, 131081, 0, 3, 131083, 0, 131072, 131085, 0, 196616, 131086, 0, 131079, 196613, 0, 65536, 196617, 0, 65536, 196622, 0, 65536, 262149, 0, 65540, 262150, 0, 6, 262151, 0, 196611, 262153, 0, 131073, 262154, 0, 196611, 262156, 0, 196609, 262157, 0, 196610, 262158, 0, 65539, 327685, 0, 131076, 327686, 0, 196619, 327694, 0, 65536, 393221, 0, 65536, 393224, 0, 0, 393226, 0, 1, 393227, 0, 196610, 393228, 0, 196611, 393230, 0, 65536, 458757, 0, 65536, 458759, 0, 196609, 458760, 0, 65539, 458762, 0, 65536, 458766, 0, 65536, 524293, 0, 65536, 524296, 0, 65536, 524298, 0, 131073, 524299, 0, 196611, 524302, 0, 65536, 589829, 0, 65537, 589830, 0, 196610, 589831, 0, 196610, 589832, 0, 131075, 589838, 0, 65536, 655365, 0, 65536, 655374, 0, 65536, 720901, 0, 131073, 720902, 0, 196610, 720903, 0, 196610, 720904, 0, 196611, 720907, 0, 196609, 720908, 0, 196610, 720909, 0, 196610, 720910, 0, 131075 )

[node name="Doors" type="Node2D" parent="."]
position = Vector2( 128, 8 )

[node name="RightDoor" type="Sprite" parent="Doors"]
position = Vector2( 8, 0 )
texture = ExtResource( 21 )

[node name="LeftDoor" type="Sprite" parent="Doors"]
position = Vector2( -8, 0 )
texture = ExtResource( 19 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 168, 168 )
script = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="player"]
visible = false
texture = ExtResource( 22 )
shadow_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="player"]
position = Vector2( 0, -12 )
frames = SubResource( 5 )
animation = "idle"
speed_scale = 0.5

[node name="Tween" type="Tween" parent="player"]

[node name="Walls" type="TileMap" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.27451 )
tile_set = SubResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 65541, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 131077, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131083, 0, 0, 131085, 0, 0, 131086, 0, 0, 196613, 0, 0, 196617, 0, 0, 196622, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262153, 0, 0, 262154, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 327685, 0, 0, 327686, 0, 0, 327694, 0, 0, 393221, 0, 0, 393224, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393230, 0, 0, 458757, 0, 0, 458759, 0, 0, 458760, 0, 0, 458762, 0, 0, 458766, 0, 0, 524293, 0, 0, 524296, 0, 0, 524298, 0, 0, 524299, 0, 0, 524302, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589838, 0, 0, 655365, 0, 0, 655374, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0 )

[node name="Warp" type="Node2D" parent="."]
position = Vector2( 128, -8 )
script = ExtResource( 23 )
sceneName = "res://levels/three.tscn"

[node name="Area1" type="Area2D" parent="Warp"]
position = Vector2( -8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Warp/Area1"]
shape = SubResource( 7 )

[node name="Area2" type="Area2D" parent="Warp"]
position = Vector2( 8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Warp/Area2"]
shape = SubResource( 8 )

[node name="Label" type="Label" parent="."]
margin_left = 184.0
margin_right = 239.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 9 )
text = "Two"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ghost" type="Node2D" parent="."]
position = Vector2( 200, 40 )
script = ExtResource( 20 )

[node name="GhostBob" type="AnimationPlayer" parent="Ghost"]
autoplay = "GhostBob"
anims/GhostBob = SubResource( 18 )

[node name="ShadowPulse" type="AnimationPlayer" parent="Ghost"]
autoplay = "ShadowPulse"
anims/ShadowPulse = SubResource( 19 )

[node name="GhostArea2D" type="Area2D" parent="Ghost"]
script = ExtResource( 24 )

[node name="Ghost_CollisionShape2D" type="CollisionShape2D" parent="Ghost/GhostArea2D"]
shape = SubResource( 20 )

[node name="Shadow" type="Sprite" parent="Ghost"]
modulate = Color( 1, 1, 1, 0.313726 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 12 )

[node name="Ghost" type="Sprite" parent="Ghost"]
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 0, -10 )
texture = ExtResource( 17 )

[node name="Symbol" type="Label" parent="Ghost/Ghost"]
modulate = Color( 0.298039, 0.498039, 0.141176, 0.784314 )
margin_left = -8.0
margin_top = -5.0
margin_right = 8.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 21 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ghost2" type="Node2D" parent="."]
position = Vector2( 184, 120 )
script = ExtResource( 20 )

[node name="GhostBob" type="AnimationPlayer" parent="Ghost2"]
autoplay = "GhostBob"
anims/GhostBob = SubResource( 14 )

[node name="ShadowPulse" type="AnimationPlayer" parent="Ghost2"]
autoplay = "ShadowPulse"
anims/ShadowPulse = SubResource( 15 )

[node name="GhostArea2D" type="Area2D" parent="Ghost2"]
script = ExtResource( 24 )

[node name="Ghost_CollisionShape2D" type="CollisionShape2D" parent="Ghost2/GhostArea2D"]
shape = SubResource( 12 )

[node name="Shadow" type="Sprite" parent="Ghost2"]
modulate = Color( 1, 1, 1, 0.313726 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 12 )

[node name="Ghost" type="Sprite" parent="Ghost2"]
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 0, -10 )
texture = ExtResource( 17 )

[node name="Symbol" type="Label" parent="Ghost2/Ghost"]
modulate = Color( 0.298039, 0.498039, 0.141176, 0.784314 )
margin_left = -8.0
margin_top = -5.0
margin_right = 8.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 13 )
text = "2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ghost3" type="Node2D" parent="."]
position = Vector2( 120, 136 )
script = ExtResource( 20 )

[node name="GhostBob" type="AnimationPlayer" parent="Ghost3"]
autoplay = "GhostBob"
anims/GhostBob = SubResource( 16 )

[node name="ShadowPulse" type="AnimationPlayer" parent="Ghost3"]
autoplay = "ShadowPulse"
anims/ShadowPulse = SubResource( 17 )

[node name="GhostArea2D" type="Area2D" parent="Ghost3"]
script = ExtResource( 24 )

[node name="Ghost_CollisionShape2D" type="CollisionShape2D" parent="Ghost3/GhostArea2D"]
shape = SubResource( 12 )

[node name="Shadow" type="Sprite" parent="Ghost3"]
modulate = Color( 1, 1, 1, 0.313726 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 12 )

[node name="Ghost" type="Sprite" parent="Ghost3"]
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 0, -10 )
texture = ExtResource( 17 )

[node name="Symbol" type="Label" parent="Ghost3/Ghost"]
modulate = Color( 0.298039, 0.498039, 0.141176, 0.784314 )
margin_left = -8.0
margin_top = -5.0
margin_right = 8.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 13 )
text = "3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_completed" from="player/Tween" to="player" method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="Warp/Area1" to="Warp" method="_on_Area1_body_entered"]
[connection signal="body_entered" from="Warp/Area2" to="Warp" method="_on_Area2_body_entered"]
[connection signal="body_entered" from="Ghost/GhostArea2D" to="Ghost/GhostArea2D" method="_on_GhostArea2D_body_entered"]
[connection signal="body_entered" from="Ghost2/GhostArea2D" to="Ghost2/GhostArea2D" method="_on_GhostArea2D_body_entered"]
[connection signal="body_entered" from="Ghost3/GhostArea2D" to="Ghost3/GhostArea2D" method="_on_GhostArea2D_body_entered"]
